updated storeController
